<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SMile</string>
    <string name="beta_app_name">SMile BETA</string>
    <string name="shortcuts_title">SMile Accounts</string>
    <string name="unread_widget_label">SMile Unread</string>
    <string name="remote_control_label">SMile remote control</string>
    <string name="remote_control_desc">Allows this application to control SMile activities and settings.</string>
    <string name="app_authors">Developed by students in "Mobile Application Development" at Friedrich-Alexander-University
        Erlangen-Nuremberg. \"K-9 Mail\" was developed by Google, The K-9 Dog Walkers.</string>
    <string name="app_copyright_fmt">\u00a9 2015 SMile,&lt;br /&gt;\u00a9 2008-<xliff:g>%s</xliff:g>
        The K-9 Dog Walkers,&lt;br /&gt;Portions \u00a9 2006-<xliff:g>%s</xliff:g> the Android Open Source Project.</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0.</string>
    <string name="app_license_apache_full">Copyright 2015 SMile
        &lt;br /&gt;
        &lt;br /&gt;Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        &lt;br /&gt;
        &lt;br /&gt;&#160;&#160;&#160;&#160;http://www.apache.org/licenses/LICENSE-2.0
        &lt;br /&gt;
        &lt;br /&gt;Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="app_license_apache_1">Copyright 2015 SMile
        &lt;br /&gt;
        &lt;br /&gt;Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        &lt;br /&gt;
        &lt;br /&gt;&#160;&#160;&#160;&#160;
    </string>
    <string name="app_license_apache_url">http://www.apache.org/licenses/LICENSE-2.0
    </string>
    <string name="app_license_apache_2">
        &lt;br /&gt;
        &lt;br /&gt;Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="welcome_message_title">Welcome to SMile</string>
    <string name="accounts_welcome"><![CDATA[
<p>
SMile is a powerful free email client for Android based on K-9.
</p><p>
Its improved features include:
</p>
<ul>
  <li>S/MIME-support with SMileCE</li>
  <li>RemindMe!-functionality for emails</li>
  <li>Modern design</li>
  <li>Push mail using IMAP IDLE</li>
  <li>Better performance</li>
  <li>Email signatures</li>
  <li>Folder subscriptions</li>
  <li>All folder synchronization</li>
  <li>Keyboard shortcuts</li>
  <li>Better IMAP support</li>
  <li>Saving attachments to SD</li>
  <li>Message sorting</li>
  <li>…and more</li>
</ul>
<p>
Please note that SMile does not support most free Hotmail accounts and, like many mail clients, has
some quirks when talking to Microsoft Exchange.
</p><p>
Please submit bug reports, contribute new features and ask questions at
<a href="https://github.com/FAU-Inf2/SMile">https://github.com/FAU-Inf2/SMile/</a>.
</p>
    ]]></string>
    <string name="default_signature">-- \nSent from my Android device with SMile. Please excuse my brevity.</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"<xliff:g id="account">%s</xliff:g>\" will be removed from SMile.</string>
    <string name="account_recreate_dlg_instructions_fmt">All local data for \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="account_clear_dlg_instructions_fmt">Local copies of messages in \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="import_dialog_error_message">Please install a file manager to continue with this import.</string>
    <string name="open_market">Open Play Store</string>
    <string name="app_authors_fmt">Authors: <xliff:g id="app_authors">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries">We\'re using the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="preferences_title">Settings</string>
    <string name="about_action">About</string>
    <string name="folder_list">All folders</string>
    <string name="special_mailbox_name_inbox">Inbox</string>
    <string name="special_mailbox_name_drafts">Drafts</string>
    <string name="special_mailbox_name_trash">Trash</string>
    <string name="special_mailbox_name_sent">Sent</string>
    <string name="account_setup_incoming_delete_policy_label">When I delete a message</string>
    <string name="local_storage_provider_label">Storage location</string>
    <string name="account_setup_expunge_policy_label">Erase deleted messages on server</string>
    <string name="drafts_folder_label">Drafts folder</string>
    <string name="sent_folder_label">Sent folder</string>
    <string name="trash_folder_label">Trash folder</string>
    <string name="archive_folder_label">Archive folder</string>
    <string name="spam_folder_label">Spam folder</string>
    <string name="account_setup_auto_expand_folder">Auto-expand folder</string>
    <string name="account_settings_default_label">Default account</string>
    <string name="account_settings_default_summary">Send mail from this account by default</string>
    <string name="account_settings_notify_label">New mail notifications</string>
    <string name="account_settings_folder_notify_new_mail_mode_label">Notifications folders</string>
    <string name="account_settings_notify_sync_label">Sync notifications</string>
    <string name="account_settings_notify_summary">Notify in status bar when mail arrives</string>
    <string name="account_settings_notify_sync_summary">Notify in status bar while mail is checked</string>
    <string name="account_settings_notify_self_label">Include outgoing mail</string>
    <string name="account_settings_notify_self_summary">Show a notification for messages I sent</string>
    <string name="account_settings_notification_opens_unread_label">Notification opens unread messages</string>
    <string name="account_settings_notification_opens_unread_summary">Searches for unread messages when Notification is opened</string>
    <string name="account_settings_show_pictures_label">Always show images</string>
    <string name="account_settings_composition">Sending mail</string>
    <string name="account_settings_default_quoted_text_shown_label">Quote message when replying</string>
    <string name="account_settings_default_quoted_text_shown_summary">Include the original message in your reply.</string>
    <string name="account_settings_message_format_label">Message Format</string>
    <string name="account_settings_message_read_receipt_label">Read receipt</string>
    <string name="account_settings_message_read_receipt_summary">Always request a read receipt</string>
    <string name="account_settings_quote_style_label">Reply quoting style</string>
    <string name="account_settings_general_title">General settings</string>
    <string name="account_settings_sync">Fetching mail</string>
    <string name="account_settings_folders">Folders</string>
    <string name="account_settings_quote_prefix_label">Quoted text prefix</string>
    <string name="account_settings_crypto">Cryptography</string>
    <string name="account_settings_mail_check_frequency_label">e-Mail poll frequency</string>
    <string name="account_settings_storage_title">Storage</string>
    <string name="account_settings_color_label">Account color</string>
    <string name="account_settings_color_summary">The accent color of this account used in folder and account list</string>
    <string name="account_settings_led_color_label">Notification LED color</string>
    <string name="account_settings_led_color_summary">The color your device LED should blink for this account</string>
    <string name="account_settings_mail_display_count_label">Local folder size</string>
    <string name="account_settings_autodownload_message_size_label">Fetch messages up to</string>
    <string name="account_settings_message_age_label">Sync messages from</string>
    <string name="account_settings_folder_display_mode_label">Folders to display</string>
    <string name="account_settings_folder_sync_mode_label">Poll folders</string>
    <string name="account_settings_folder_push_mode_label">Push folders</string>
    <string name="account_settings_folder_target_mode_label">Move/copy destination folders</string>
    <string name="account_settings_sync_remote_deletetions_label">Sync server deletions</string>
    <string name="account_settings_sync_remote_deletetions_summary">Remove messages when deleted on server</string>
    <string name="account_settings_incoming_label">Incoming server</string>
    <string name="account_settings_incoming_summary">Configure the incoming mail server</string>
    <string name="account_settings_outgoing_label">Outgoing server</string>
    <string name="account_settings_outgoing_summary">Configure the outgoing mail (SMTP) server</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="notifications_title">Notifications</string>
    <string name="account_settings_vibrate_enable">Vibrate</string>
    <string name="account_settings_vibrate_summary">Vibrate when mail arrives</string>
    <string name="account_settings_vibrate_pattern_label">Vibration patterns</string>
    <string name="account_settings_vibrate_times">Repeat vibration</string>
    <string name="account_settings_led_label">Blink LED</string>
    <string name="account_settings_led_summary">Blink LED when mail arrives</string>
    <string name="account_settings_composition_label">Composition defaults</string>
    <string name="account_settings_composition_summary">Set your default From, Bcc and signature</string>
    <string name="search_all_messages_title">All messages</string>
    <string name="integrated_inbox_title">Unified Inbox</string>
    <string name="account_settings_searchable_label">Folders to search</string>
    <string name="account_settings_remote_search_num_label">Server search limit</string>
    <string name="account_settings_search">Search</string>
    <string name="account_settings_remote_search_enabled">Enable server search</string>
    <string name="account_settings_remote_search_enabled_summary">Search messages on the server in addition to those on your device</string>
    <string name="smime_app">S/MIME App</string>
    <string name="default_crypto_title">Default crypto protocol</string>
    <string name="account_preferences_main_key">main</string>
    <string name="account_preferences_incoming_key">incoming_prefs</string>
    <string name="account_preferences_composing_key">composing</string>
    <string name="account_preferences_composition_key">composition</string>
    <string name="account_preferences_outgoing_key">outgoing</string>
    <string name="account_preferences_folders_key">folders</string>
    <string name="account_preferences_storage_provider_key">storage_provider</string>
    <string name="account_preferences_notifications_key">notifications</string>
    <string name="account_preferences_search_key">search</string>
</resources>